# pyvmr

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
src/pyvmr/: __init__.py  catalog.py  cli.py  client.py  constants.py  download.py  filters.py  models.py
tests/: __init__.py  test_catalog.py  test_download.py  test_filters.py  test_models.py
